# mina_bridge

./: .env.template  .gitignore  .gitmodules  Dockerfile  Makefile  README.md  integration_test.sh  package-lock.json  public_key.txt  setup.sh
.github/workflows/: ci.yaml  rust_ci.yaml
account_inclusion/: .gitignore  Cargo.toml
account_inclusion/local_verifier/: Cargo.toml
account_inclusion/local_verifier/src/: lib.rs  main.rs
account_inclusion/program/: Cargo.toml
account_inclusion/program/elf/: riscv32im-succinct-zkvm-elf
account_inclusion/script/: Cargo.toml
account_inclusion/sp1_prover/: .gitignore  Cargo.toml
account_inclusion/sp1_prover/elf/: riscv32im-succinct-zkvm-elf
account_inclusion/sp1_prover/lib/: Cargo.toml
account_inclusion/sp1_prover/lib/src/: lib.rs
account_inclusion/sp1_prover/program/: Cargo.toml
account_inclusion/sp1_prover/program/src/: main.rs
account_inclusion/sp1_prover/script/: Cargo.toml
account_inclusion/src/: account.rs  lib.rs  main.rs
account_inclusion/tests/: Cargo.toml
account_inclusion/tests/src/: lib.rs  main.rs  merkle_path.rs
bad_kzg_prover/: Cargo.toml
bad_kzg_prover/src/: lib.rs  main.rs  misc_tests.rs  sponge_tests.rs
contract/: remappings.txt
contract/script/: MinaBridge.s.sol
contract/src/: Account.sol  MinaAccountValidation.sol  MinaAccountValidationExample.sol  MinaBridge.sol  MinaStateSettlement.sol  MinaStateSettlementExample.sol
contract/test/: MinaBridge.t.sol
contract_deployer/: Cargo.toml
contract_deployer/src/: main.rs
core/: .env.template  Cargo.toml
core/abi/: MinaAccountValidation.json  MinaAccountValidationExample.json  MinaBridge.json  MinaStateSettlement.json  MinaStateSettlementExample.json
core/graphql/: account_query.graphql  best_chain_query.graphql  mina_schema.json
core/src/: aligned.rs  aligned_polling_service.rs  constants.rs  eth.rs  lib.rs  main.rs  mina.rs  mina_polling_service.rs  sdk.rs  serialization.rs  smart_contract_utility.rs
core/src/graphql/: account_query.graphql  best_chain_query.graphql  candidate_query.graphql  merkle_query.graphql  mina_schema.json  state_query.graphql
core/src/proof/: account_proof.rs  mod.rs  serialization.rs  state_proof.rs
core/src/sol/: account.rs  mod.rs  serialization.rs
core/src/utils/: account.rs  constants.rs  contract.rs  env.rs  mod.rs  wallet.rs  wallet_alloy.rs
demo/: Makefile
demo/circuit_gen/: Cargo.toml  Makefile  opening_proof.json  opening_proof.mpk  proof.json  public_evals.json  public_evals.mpk  urs.json  urs.mpk  verifier_index.json
demo/circuit_gen/src/: main.rs
demo/eth_verifier/: Makefile  README.md  proof.json  proof.mpk  run.sh  state.mpk  state_serializer  verifier.sol  verifier_index.json  verify.sh
demo/state_serializer/: Cargo.toml
demo/test_circuit/: README.md  package-lock.json  package.json
eth_verifier/: .gitignore  .solhint.json  Makefile  as  foundry.toml  hardhat.config.js  lagrange_bases.mpk  linearization.mpk  linearization.rlp  numerator.mpk  package-lock.json  package.json  proof.mpk  prover_proof.mpk  public_inputs.mpk  query.sh  run.sh  state.mpk  tenderly.sh  tenderly.yaml  urs.mpk  verifier_index.mpk
eth_verifier/cache_hardhat/: solidity-files-cache.json
eth_verifier/lib/: Alphas.sol  Commitment.sol  Constants.sol  Evaluations.sol  Oracles.sol  Permutation.sol  Polynomial.sol  Proof.sol  Utils.sol  UtilsExternal.sol  VerifierIndex.sol
evm_bridge/: .gitmodules  .prettierignore  README.md  package-lock.json  package.json  tsconfig.json
example/app/: Cargo.toml
example/app/abi/: MinaBalance.json  SudokuValidity.json
example/app/src/: main.rs
example_app/: README.md  bun.lockb  package.json
kimchi_test/: .gitignore  Cargo.toml
kimchi_test/src/: main.rs
kzg_prover/: .gitignore  Cargo.toml  srs.json  srs.rmp
kzg_prover/serializer/: Cargo.toml
kzg_prover/serializer/src/: lib.rs  main.rs  serialize.rs  type_aliases.rs  utils.rs
kzg_prover/serializer/src/implementations/: core_types.rs  lagrange_bases.rs  mod.rs  polish_token.rs  prover_proof.rs  verifier_index.rs
kzg_prover/src/: constraint_system.rs  inputs.rs  lib.rs  main.rs  misc_tests.rs  serialize.rs  snarky_gate.rs  sponge_tests.rs  srs.rs  to_batch.rs
kzg_prover/test_data/: constraint_system.json  witness.json
merkle-path/: .gitignore  Cargo.toml  input.json
merkle-path/src/: account.rs  big_int.rs  field.rs  main.rs  merkle_path.rs  merkle_root.rs
merkle_path/: .gitignore
mina_bridge_sp1/: Cargo.toml
mina_bridge_sp1/compress/: Cargo.toml
mina_bridge_sp1/compress/src/: main.rs
mina_bridge_sp1/lib/: Cargo.toml
mina_bridge_sp1/lib/src/: lib.rs
mina_bridge_sp1/lib/unit_test_data/: verifier_index.mpk
mina_bridge_sp1/program/: Cargo.toml
mina_bridge_sp1/program/elf/: riscv32im-succinct-zkvm-elf
mina_bridge_sp1/program/src/: main.rs
mina_bridge_sp1/prove/: Cargo.toml
mina_bridge_sp1/prove/src/: main.rs
mina_bridge_sp1/script/: Cargo.toml
mina_bridge_sp1/script/src/: main.rs
mina_proof_parser/: dune-project  opam.export
monitor/: .gitignore  README.md  mix.exs
pickles/: Cargo.toml  Makefile
pickles/src/: lib.rs  preprocess.rs  state_proof.rs  type_aliases.rs  verifier.rs
polling_service/: .gitignore  demo_run.sh  demo_setup.sh  jest.config.js  package-lock.json  package.json  run.sh
polling_service/parser/: .gitignore  Cargo.toml
polling_service/parser/src/: lib.rs  main.rs
public_input_gen/: .gitignore  Cargo.toml
public_input_gen/src/: bn254.rs  main.rs  state_proof.rs
state_utility/: run.sh
state_utility/merkle_root/: Cargo.toml
state_utility/merkle_root/src/: lib.rs  main.rs
state_utility/merkle_root/tests/: process_input.rs
state_utility/server/: Cargo.toml  verifier.json
state_utility/server/src/: main.rs
test_prover/: Makefile  README.md  package-lock.json  package.json
testsandbox/: Cargo.toml
verifier_circuit/: .gitignore  Makefile  README.md  deno.json  package-lock.json  package.json  tsconfig.json
verifier_circuit_tests/: Cargo.toml
verify_circuit_tests/: Cargo.toml
wallet/: Cargo.toml  LICENSE_MIT
(+314 files in other folders)
