[package]
name = "contract_deployer"
version = "0.1.0"
edition = "2021"

[dependencies]
mina_bridge_core = { path = "../core/" }
aligned-sdk = { git = "https://github.com/lambdaclass/aligned_layer.git", branch = "mina" }
tokio = "1.39.1"
env_logger = "0.11.5"
bincode = "1.3.3"
log = "0.4.22"
[patch.crates-io]
ark-ff = { git = "https://github.com/openmina/algebra", branch = "openmina" }
ark-ec = { git = "https://github.com/openmina/algebra", branch = "openmina" }
ark-poly = { git = "https://github.com/openmina/algebra", branch = "openmina" }
ark-serialize = { git = "https://github.com/openmina/algebra", branch = "openmina" }
