[package]
name = "mina_bridge_core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.6.0"
serde_json = "1.0"
num-bigint = "0.4.3"
rmp-serde = "1.1.2"
hex = "0.4.3"
reqwest = { version = "^0.11", features = ["blocking"] }
kimchi = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4-vrf" }
mina-signer = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4-vrf" }
poly-commitment = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4-vrf" }
mina-curves = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4-vrf" }
o1-utils = { git = "https://github.com/lambdaclass/proof-systems", branch = "add-verifier-serializations" }
ark-ff = { version = "0.3.0", features = ["parallel", "asm"] }
ark-ec = { version = "0.3.0", features = ["parallel"] }
ark-poly = { version = "0.3.0", features = ["parallel"] }
ark-serialize = "0.3.0"
mina-tree = { git = "https://github.com/lambdaclass/openmina/", branch = "mina_bridge" }
mina-p2p-messages = { git = "https://github.com/lambdaclass/openmina/", branch = "mina_bridge" }
aligned-sdk = { git = "https://github.com/lambdaclass/aligned_layer.git", branch = "use_two_vks" }
ethers = { tag = "v2.0.15-fix-reconnections", features = [
  "ws",
  "rustls",
  "solc",
], git = "https://github.com/yetanotherco/ethers-rs.git" }
ethers-signers = { tag = "v2.0.15-fix-reconnections", git = "https://github.com/yetanotherco/ethers-rs.git" }
rpassword = "7.3.1"
tokio = "1.39.1"
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
base64 = "0.22.1"
graphql_client = { version = "0.14.0", features = [
  "reqwest",
  "reqwest-blocking",
] }
alloy = { version = "0.3.1", features = ["full", "signer-keystore"] }
clap = { version = "4.5.4", features = ["derive"] }
sha3 = "0.10.8"
bincode = "1.3.3"
futures = "0.3.30"
num-traits = "0.2.19"
alloy-sol-types = "0.8.2"
alloy-contract = "0.3.1"

[patch.crates-io]
ark-ff = { git = "https://github.com/openmina/algebra", branch = "openmina" }
ark-ec = { git = "https://github.com/openmina/algebra", branch = "openmina" }
ark-poly = { git = "https://github.com/openmina/algebra", branch = "openmina" }
ark-serialize = { git = "https://github.com/openmina/algebra", branch = "openmina" }
