[package]
name = "mina_bridge_core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.6.0"
serde_json = "1.0"
num-bigint = "0.4.3"
rmp-serde = "1.1.2"
hex = "0.4.3"
reqwest = { version = "^0.11", features = ["blocking"] }
kimchi = { git = "https://github.com/lambdaclass/openmina-proof-systems", rev = "44e0d3b98b8747de54e595f53d97c035ff43167c" }
mina-signer = { git = "https://github.com/lambdaclass/openmina-proof-systems", rev = "44e0d3b98b8747de54e595f53d97c035ff43167c" }
poly-commitment = { git = "https://github.com/lambdaclass/openmina-proof-systems", rev = "44e0d3b98b8747de54e595f53d97c035ff43167c" }
mina-curves = { git = "https://github.com/lambdaclass/openmina-proof-systems", rev = "44e0d3b98b8747de54e595f53d97c035ff43167c" }
o1-utils = { git = "https://github.com/lambdaclass/proof-systems", rev = "5bdeab3c2a43a671645952f63b9354b7a20b2326" }
ark-ff = { version = "0.3.0", features = ["parallel", "asm"] }
ark-ec = { version = "0.3.0", features = ["parallel"] }
ark-poly = { version = "0.3.0", features = ["parallel"] }
ark-serialize = "0.3.0"
mina-tree = { git = "https://github.com/lambdaclass/openmina/", rev = "711c99f92ca3241dfbe8ae6d257b333e63abe643" }
mina-p2p-messages = { git = "https://github.com/lambdaclass/openmina/", rev = "711c99f92ca3241dfbe8ae6d257b333e63abe643" }
aligned-sdk = { git = "https://github.com/lambdaclass/aligned_layer.git", rev = "cebeee7b86de0fcd3fd6f97bcd8a1096d7708bc5" }
ethers = { version = "2.0", features = ["ws", "rustls"] }
rpassword = "7.3.1"
tokio = "1.39.1"
dotenv = "0.15.0"
env_logger = "0.11.5"
log = "0.4.22"
base64 = "0.22.1"
graphql_client = { version = "0.14.0", features = [
  "reqwest",
  "reqwest-blocking",
] }
alloy = { version = "0.3.1", features = ["full", "signer-keystore"] }
clap = { version = "4.5.4", features = ["derive"] }
sha3 = "0.10.8"
bincode = "1.3.3"
futures = "0.3.30"
num-traits = "0.2.19"
alloy-sol-types = "0.8.2"
alloy-contract = "0.3.1"
zeroize = "1.8.1"

[patch.crates-io]
ark-ff = { git = "https://github.com/lambdaclass/openmina_algebra", rev = "017531e7aaa15a2c856532b0843876e371b01122" }
ark-ec = { git = "https://github.com/lambdaclass/openmina_algebra", rev = "017531e7aaa15a2c856532b0843876e371b01122" }
ark-poly = { git = "https://github.com/lambdaclass/openmina_algebra", rev = "017531e7aaa15a2c856532b0843876e371b01122" }
ark-serialize = { git = "https://github.com/lambdaclass/openmina_algebra", rev = "017531e7aaa15a2c856532b0843876e371b01122" }

[patch.'https://github.com/openmina/algebra']
ark-ff = { git = "https://github.com/lambdaclass/openmina_algebra", rev = "017531e7aaa15a2c856532b0843876e371b01122" }
ark-ec = { git = "https://github.com/lambdaclass/openmina_algebra", rev = "017531e7aaa15a2c856532b0843876e371b01122" }
ark-poly = { git = "https://github.com/lambdaclass/openmina_algebra", rev = "017531e7aaa15a2c856532b0843876e371b01122" }
ark-serialize = { git = "https://github.com/lambdaclass/openmina_algebra", rev = "017531e7aaa15a2c856532b0843876e371b01122" }
