[package]
name = "kimchi_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kimchi = {git = "https://github.com/lambdaclass/proof-systems.git", branch = "min_prover"}
num-traits = "0.2"
ark-ff = { version = "0.3.0", features = [ "parallel", "asm" ] }
