[package]
name = "kzg_prover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kimchi = { path = "../mina_monorepo/src/lib/crypto/proof-systems/kimchi", features = ["bn254"] }
poly-commitment = { path = "../mina_monorepo/src/lib/crypto/proof-systems/poly-commitment" }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
ark-ec = { version = "0.3.0", features = ["parallel"] }
ark-bn254 = "0.3.0"
rmp-serde = "1.1.2"
