[package]
name = "kzg_prover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kimchi = { path = "proof-systems/kimchi", version = "0.1.0" }
poly-commitment = { path = "proof-systems/poly-commitment", version = "0.1.0" }
ark-bn254 = "0.3.0"
ark-ec = "0.3.0"
ark-ff = "0.3.0"
ark-poly = "0.3.0"
ark-std = "0.3.0"
num-traits = "0.2.17"
