[package]
name = "kzg_prover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kimchi = { path = "proof-systems/kimchi", version = "0.1.0", features = ["bn254"] }
poly-commitment = { path = "proof-systems/poly-commitment", version = "0.1.0" }
ark-bn254 = "0.3.0"
ark-ec = "0.3.0"
ark-ff = "0.3.0"
ark-poly = "0.3.0"
ark-std = "0.3.0"
ark-serialize = "0.3.0"
num-traits = "0.2.17"
rmp-serde = "1.1.2"
serde_json = "1.0.108"
serde = "1.0.192"
num = "0.4.1"
const-hex = "1.10.0"
hex = "0.4.3"
