[package]
name = "merkle-path"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"] }
serde-enum-str = "0.4.0"
hex = "0.4.3"
reqwest = { version = "0.12", features = ["blocking"] }

# hash functions
#kimchi = { git = "https://github.com/o1-labs/proof-systems.git", branch = "develop", version = "0.1.0" }
#mina-curves = { git = "https://github.com/o1-labs/proof-systems.git", branch = "develop", version = "0.1.0" }
ark-poly = { version = "0.3.0" }
ark-serialize = { version = "0.3.0" }
num-bigint = "0.4.3"
ark-ff = { version = "0.3.0", features = ["parallel", "asm"] }
ark-ec = { version = "0.3.0" }
generic-array = "1.0.0"
bs58 = { version = "0.5.1", features = ["check"] }
binprot = { git = "https://github.com/openmina/binprot-rs", rev = "3f29b25" }
binprot_derive = { git = "https://github.com/openmina/binprot-rs", rev = "3f29b25" }
mina-p2p-messages = { git = "https://github.com/openmina/openmina.git", features = [
    "hashing",
] }
mina-hasher = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4-vrf" }
mina-curves = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4-vrf" }
kimchi = { git = "https://github.com/openmina/proof-systems", branch = "ledger-newtypes-rampup4-vrf" }
mina-tree = { git = "https://github.com/openmina/openmina.git" }
snark = { git = "https://github.com/openmina/openmina.git" }

[patch.crates-io]
ark-ff = { git = "https://github.com/openmina/algebra", branch = "openmina" }
ark-ec = { git = "https://github.com/openmina/algebra", branch = "openmina" }
ark-poly = { git = "https://github.com/openmina/algebra", branch = "openmina" }
ark-serialize = { git = "https://github.com/openmina/algebra", branch = "openmina" }
