[package]
name = "merkle-path"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0.108"
serde = { version = "1.0.192", features = ["derive"] }
serde-enum-str = "0.4.0"
hex = "0.4.3"
reqwest = { version = "0.12", features = ["blocking"] }

# hash functions
#kimchi = { git = "https://github.com/o1-labs/proof-systems.git", branch = "develop", version = "0.1.0" }
#mina-curves = { git = "https://github.com/o1-labs/proof-systems.git", branch = "develop", version = "0.1.0" }
ark-poly = { version = "0.3.0" }
ark-serialize = { version = "0.3.0" }
num-bigint = "0.4.3"
ark-ff = { version = "0.3.0", features = ["parallel", "asm"] }
ark-ec = { version = "0.3.0" }
generic-array = "1.0.0"
bs58 = { version = "0.5.1", features = ["check"] }
