[workspace]
members = ["compress", "lib", "program", "prove"]

[workspace.dependencies]
kimchi = { git = "https://github.com/lambdaclass/proof-systems", branch = "add-verifier-serializations" }
o1-utils = { git = "https://github.com/lambdaclass/proof-systems", branch = "add-verifier-serializations" }

sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.1-testnet" }
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.1-testnet"  }
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.1-testnet" }

ark-ff = { version = "0.3.0", features = ["parallel", "asm"] }
ark-ec = { version = "0.3.0", features = ["parallel"] }
ark-poly = { version = "0.3.0", features = ["parallel"] }
ark-serialize = "0.3.0"

bincode = "1.3.3"
serde = "1.0.197"
rmp-serde = "1.1.2"
