[package]
name = "public_input_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kimchi = { git = "https://github.com/o1-labs/proof-systems.git" }
num-traits = "0.2"
ark-ff = { version = "0.3.0", features = ["parallel", "asm"] }
ark-ec = { version = "0.3.0", features = ["parallel"] }
ark-poly = { version = "0.3.0", features = ["parallel"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ark-bn254 = "0.3.0"
