[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
log = "0.4.22"
mina_bridge_core = { path = "../../core/" }
tokio = "1.40.0"

[patch.crates-io]
ark-ff = { git = "https://github.com/openmina/algebra", branch = "openmina" }
ark-ec = { git = "https://github.com/openmina/algebra", branch = "openmina" }
ark-poly = { git = "https://github.com/openmina/algebra", branch = "openmina" }
ark-serialize = { git = "https://github.com/openmina/algebra", branch = "openmina" }
