[workspace]
[package]
version = "0.1.0"
name = "mina_bridge_sp1-script"
edition = "2021"

[dependencies]
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "main" }
sp1-prover = { git = "https://github.com/succinctlabs/sp1.git", rev = "main" }
kimchi-verifier-ffi = { path = "../lib/" }
bincode = "1.3.3"

[build-dependencies]
sp1-helper = { git = "https://github.com/succinctlabs/sp1.git", rev = "main"  }
