[package]
name = "kimchi-verifier-ffi"
version = "0.1.0"
edition = "2021"

[dependencies]
kimchi = { git = "https://github.com/lambdaclass/proof-systems", branch = "new_version" }
o1-utils = { git = "https://github.com/lambdaclass/proof-systems", branch = "new_version" }
ark-ff = { version = "0.3.0", features = ["parallel", "asm"] }
ark-ec = { version = "0.3.0", features = ["parallel"] }
ark-poly = { version = "0.3.0", features = ["parallel"] }
serde = "1.0.197"
rmp-serde = "1.1.2"
ark-serialize = "0.3.0"
