[package]
name = "kimchi-verifier-ffi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kimchi-ecadd-proof-generator"
path = "src/ec_add_proof_generator/main.rs"

[dependencies]
kimchi.workspace = true
o1-utils.workspace = true
ark-ff.workspace = true
ark-ec.workspace = true
ark-poly.workspace = true
serde.workspace = true
rmp-serde.workspace = true
ark-serialize.workspace = true
