[workspace]
[package]
version = "0.1.0"
name = "mina_bridge_sp1-program"
edition = "2021"

[dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git", rev = "v1.0.0-testnet" }
kimchi-verifier-ffi = { path = "../lib/" }
kimchi = { git = "https://github.com/lambdaclass/proof-systems", branch = "new_version" }
o1-utils = { git = "https://github.com/lambdaclass/proof-systems", branch = "new_version" }
ark-ff = { version = "0.3.0", features = ["parallel", "asm"] }
ark-ec = { version = "0.3.0", features = ["parallel"] }
ark-poly = { version = "0.3.0", features = ["parallel"] }
