[package]
version = "0.1.0"
name = "mina_bridge_sp1-program"
edition = "2021"

[dependencies]
sp1-zkvm.workspace = true
kimchi-verifier-ffi = { path = "../lib/" }
kimchi.workspace = true
o1-utils.workspace = true
ark-ff.workspace = true
ark-ec.workspace = true
ark-poly.workspace = true
bincode.workspace = true
