[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.203"
tokio = { version = "1.38.0", features = ["rt-multi-thread"] }
axum = "0.7.5"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "b000e16", features = [
    "full",
] }
alloy-primitives = "0.7.6"
reqwest = "0.12.4"
merkle-path = { path = "../merkle_path" }
